migrated to homie 4.0.0

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,16 +12,16 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-lib_extra_dirs = D:\Eigene Dateien\Git\Librarys
+lib_extra_dirs = /media/andi/sdd1/Git/Librarys/
 
 [env:esp01_1m]
 platform = espressif8266
 board = esp01_1m
 framework = arduino
-lib_extra_dirs = D:\Eigene Dateien\Git\Librarys
+lib_extra_dirs = /media/andi/sdd1/Git/Librarys/
 
 [env:esp8285]
 platform = espressif8266
 board = esp8285
 framework = arduino
-lib_extra_dirs = D:\Eigene Dateien\Git\Librarys
+lib_extra_dirs = /media/andi/sdd1/Git/Librarys/
