--- a/platformio.ini
+++ b/platformio.ini
@@ -14,14 +14,23 @@ board = d1_mini
 framework = arduino
 lib_extra_dirs = /media/andi/sdd1/Git/Librarys/
 
+; Serial Monitor options
+monitor_speed = 115200
+
 [env:esp01_1m]
 platform = espressif8266
 board = esp01_1m
 framework = arduino
 lib_extra_dirs = /media/andi/sdd1/Git/Librarys/
 
+; Serial Monitor options
+monitor_speed = 115200
+
 [env:esp8285]
 platform = espressif8266
 board = esp8285
 framework = arduino
 lib_extra_dirs = /media/andi/sdd1/Git/Librarys/
+
+; Serial Monitor options
+monitor_speed = 115200
